homework7/manifest/order-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderservice
  labels:
    app: order-microservice-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-microservice-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: order-microservice-app
    spec:
      containers:
        - name: orderservice
          image: alyanovao/orderservice:1.0.1
          ports:
            - containerPort: 8008
          imagePullPolicy: Always
