homework7/manifest/notification-service.yml
apiVersion: v1
kind: Service
metadata:
  name: notification
  labels:
    app: order-microservice-app
spec:
  type: ClusterIP
  selector:
    app: order-microservice-app
  ports:
    - port: 8080
      name: web
      protocol: TCP
      targetPort: 8080
