homework7/manifest/order-service.yml
apiVersion: v1
kind: Service
metadata:
  name: orderservice
  labels:
    app: order-microservice-app
spec:
  type: ClusterIP
  selector:
    app: order-microservice-app
  ports:
    - port: 8008
      name: web
      protocol: TCP
      targetPort: 8008
