homework7/manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /notificationService
            pathType: Prefix
            backend:
              service:
                name: notification
                port:
                  number: 8080
          - path: /billingService
            pathType: Prefix
            backend:
              service:
                name: billing
                port:
                  number: 8088
          - path: /orderService
            pathType: Prefix
            backend:
              service:
                name: orderservice
                port:
                  number: 8008
